<resources xmlns:tools="http://schemas.android.com/tools">
	<string name="app_name">Alarm Clock Sun</string>
	<string name="app_developer" translatable="false">Robimish</string>
	<string name="version">Version</string>
	<string name="am">AM</string>
	<string name="pm">PM</string>
	<string name="none">None</string>
	<string name="show_next_alarm">Show next alarm</string>
	<string name="background">Background</string>
	<string name="time_layout">Time layout</string>
	<string name="date_layout">Date layout</string>
	<string name="alarm_layout">Alarm layout</string>
	<string name="show">Show</string>
	<string name="bold">Bold</string>
	<string name="color">Color</string>
	<string name="text_size">Text size</string>
	<string name="colon">:</string>
	<string name="icon">Icon</string>
	<string name="transparency">Transparency</string>
	<string name="hour">Hour</string>
	<string name="minutes">Minutes</string>
	<string name="am_pm">AM / PM</string>
	<string name="dow_everyday">Everyday</string>
	<string name="dow_weekdays">Weekdays</string>
	<string name="dow_weekend">Weekend</string>
	<string name="dow_today">Today</string>
	<string name="dow_tomorrow">Tomorrow</string>
	<string name="word_app">App</string>
	<string name="word_version">Version</string>
	<string name="word_of">of</string>
	<string name="word_alarm">Alarm</string>
	<string name="word_alarms">Alarms</string>
	<string name="word_timer">Timer</string>
	<string name="word_timers">Timers</string>
	<string name="word_reminder">Reminder</string>
	<string name="word_more">More</string>
	<string name="word_allow">Allow</string>
	<string name="word_back">Back</string>
	<string name="word_next">Next</string>
	<string name="word_finish">Finish</string>
	<string name="letter_h">h</string>
	<string name="letter_m">m</string>
	<string name="letter_s">s</string>
	<string name="number00">00</string>
	<string name="number0">0</string>
	<string name="number1">1</string>
	<string name="number2">2</string>
	<string name="number3">3</string>
	<string name="number4">4</string>
	<string name="number5">5</string>
	<string name="number6">6</string>
	<string name="number7">7</string>
	<string name="number8">8</string>
	<string name="number9">9</string>
	<string name="timer_add_1min">+ 1m</string>
	<string name="timer_add_30sec">+ 30s</string>
	<string name="timer_add_5sec">+ 5s</string>
	<string name="state_unknown">Unknown</string>
	<string name="action_get_started">Get Started</string>
	<string name="action_alarm_snooze">Snooze</string>
	<string name="action_alarm_dismiss">Dismiss</string>
	<string name="action_alarm_dismiss_early">Dismiss early</string>
	<string name="action_alarm_dismiss_next" tools:ignore="MissingTranslation">Dismiss next alarm</string>
	<string name="action_alarm_dismiss_snoozed" tools:ignore="MissingTranslation">Dismiss snoozed alarm</string>
	<string name="message_alarm_is_snoozed" tools:ignore="MissingTranslation">Snoozed alarm rings in %1$s</string>
	<string name="action_alarm_copy">Copy</string>
	<string name="action_alarm_delete">Delete</string>
	<string name="action_timer_pause">Pause</string>
	<string name="action_timer_resume">Resume</string>
	<string name="action_timer_stop">Stop</string>
	<string name="action_yes">Yes</string>
	<string name="action_no">No</string>
	<string name="action_ok">OK</string>
	<string name="action_cancel">Cancel</string>
	<string name="action_clear">Clear</string>
	<string name="action_clear_reminder">Clear reminder</string>
	<string name="action_default">Default</string>
	<string name="action_done">Done</string>
	<string name="action_preview">Preview</string>
	<string name="action_stop_preview">Stop Preview</string>
	<string name="action_show_nfc_tag_id">Show NFC tag</string>
	<string name="action_use_any">Use any NFC tag</string>
	<string name="action_add">Add</string>
	<string name="action_replace">Replace</string>
	<string name="action_save">Save</string>
	<string name="action_skip">Skip</string>
	<string name="action_undo">Undo</string>
	<string name="action_browse">Browse</string>
	<string name="action_previous_folder">Previous folder</string>
	<string name="action_reset">Reset</string>
	<string name="action_email">Email</string>
	<string name="action_shuffle_music">Shuffle music</string>
	<string name="action_recursively_play_media">Include subfolders</string>
	<string name="action_alarm_option_audio_source">Audio source</string>
	<string name="action_alarm_option_flashlight">Flashlight</string>
	<string name="action_alarm_option_dawn" tools:ignore="MissingTranslation">Dawn</string>
	<string name="action_alarm_option_text_to_speech">Text-to-speech</string>
	<string name="action_alarm_option_volume">Volume</string>
	<string name="action_alarm_option_upcoming_reminder">Upcoming reminder</string>
	<string name="action_delete_alarm_after_dismissed">Delete after dismissed</string>
	<string name="action_skip_next_alarm">Skip next alarm</string>
	<string name="action_unskip_next_alarm">Unskip next alarm</string>
	<string name="action_export">Export</string>
	<string name="action_import">Import</string>
	<string name="action_center">Center</string>
	<string name="action_left">Left</string>
	<string name="action_right">Right</string>
	<string name="action_above_date">Above date</string>
	<string name="action_below_date">Below date</string>
	<string name="action_same_line_as_date">Same line as date</string>
	<string name="label_created_statistic">created</string>
	<string name="label_deleted_statistic">deleted</string>
	<string name="label_dismissed_statistic">dismissed</string>
	<string name="label_missed_statistic">missed</string>
	<string name="label_snoozed_statistic">snoozed</string>
	<string name="label_created_statistic_header">Time Created</string>
	<string name="label_deleted_statistic_header">Time Deleted,Name,Alarm Time</string>
	<string name="label_dismissed_statistic_header">Time Dismissed,Name,Alarm Time,Used NFC</string>
	<string name="label_missed_statistic_header">Time Missed,Name,Alarm Time</string>
	<string name="label_snoozed_statistic_header">Time Snoozed,Name,Alarm Time,Snooze Duration (seconds)</string>
	<string name="label_clock_widget">Clock</string>
	<string name="message_permission_ignore_battery_optimization_request">Allow permission to avoid alarm not running if the app has not been used for a while.&lt;br/>&lt;br/>&lt;b>Note:&lt;/b>  This depends on what device you have and &lt;b>may not actually be needed&lt;/b>.</string>
	<string name="message_permission_post_notifications_request">Allow permission for alarms to run when the app is not in focus.&lt;br/>&lt;br/>&lt;b>Note:&lt;/b>  This is a side effect of the security policies introduced in &lt;b>Android 13&lt;/b>, which are for the benefit of users, but can restrict apps in instances like this.</string>
	<string name="message_permission_schedule_exact_alarm_request">Allow permission to have alarms run precisely when scheduled.</string>
	<string name="message_permission_system_alert_window_request">Allow the app to display over other apps?&lt;br/>&lt;br/>&lt;b>Optional.&lt;/b> The alarm screen and the sunrise come up on their own without it, through the full screen notification. This is only a safety net, for phones whose maker refuses that notification.</string>
	<string name="message_playlist">Do you want to play all the music in this folder?</string>
	<string name="message_nfc_enable_on_device_request">Please enable NFC on device</string>
	<string name="message_nfc_optional">NFC optional</string>
	<string name="message_nfc_required_unsaved">NFC required</string>
	<string name="message_nfc_required_saved">NFC required — %1$s</string>
	<string name="message_nfc_required_use_any">NFC required (use any)</string>
	<string name="message_nfc_screen_locked">Please unlock device to use NFC</string>
	<string name="message_show_nfc_tag_id">ID</string>
	<string name="message_delete_nfc_tag">Are you sure you want to delete this NFC tag?</string>
	<string name="message_rename_nfc_tag">What would you like to rename the NFC tag to?</string>
	<string name="message_flashlight_on_duration">On:</string>
	<string name="message_flashlight_off_duration">Off:</string>
	<string name="message_no_alarms_scheduled">No alarms scheduled.</string>
	<string name="message_alarm_repeat_disabled">Do not repeat alarm</string>
	<string name="message_alarm_repeat_enabled">Repeat alarm</string>
	<string name="message_timer_repeat_disabled">Do not repeat timer</string>
	<string name="message_timer_repeat_enabled">Repeat timer</string>
	<string name="message_vibrate_disabled">Vibrate off</string>
	<string name="message_vibrate_enabled">Vibrate on</string>
	<string name="message_flashlight_disabled">Do not use flashlight</string>
	<string name="message_dawn_disabled" tools:ignore="MissingTranslation">Do not use the dawn simulation</string>
	<string name="message_flashlight_enabled">Use flashlight</string>
	<string name="message_dawn_enabled" tools:ignore="MissingTranslation">Use the dawn simulation</string>
	<string name="message_alarm_copy">Copied alarm</string>
	<string name="message_timer_copy">Copied timer</string>
	<string name="message_alarm_delete">Deleted alarm</string>
	<string name="message_timer_delete">Deleted timer</string>
	<string name="message_alarm_restore">Restored alarm</string>
	<string name="message_timer_restore">Restored timer</string>
	<string name="message_alarm_dismiss">Dismissed alarm</string>
	<string name="message_alarm_snooze">Snoozed alarm</string>
	<string name="message_timer_dismiss">Dismissed timer</string>
	<string name="message_statistics_started_on">Statistics started on</string>
	<string name="message_bullet">\u25BA</string>
	<string name="message_required">Required</string>
	<string name="message_optional">Optional</string>
	<string name="message_already_have_permission">You already have this permission</string>
	<string name="name_ready_made_timer" tools:ignore="MissingTranslation">Eggs</string>
	<string name="title_ringing_timer_channel" tools:ignore="MissingTranslation">Ringing timer</string>
	<string name="description_ringing_timer_channel" tools:ignore="MissingTranslation">Brings a timer that rings to the screen, even when the phone is locked.</string>
	<string name="message_timer_ringing" tools:ignore="MissingTranslation">Time is up</string>
	<string name="title_record_statistics" tools:ignore="MissingTranslation">Record statistics</string>
	<string name="description_record_statistics_true" tools:ignore="MissingTranslation">Dismissed, snoozed, missed, created and deleted alarms are counted.</string>
	<string name="description_record_statistics_false" tools:ignore="MissingTranslation">Nothing new is counted. What was counted before is kept until you reset it.</string>
	<string name="message_set_alarm_permission_missing" tools:ignore="MissingTranslation">Android says this permission is missing, which it is not meant to allow. Other apps cannot set an alarm here.</string>
	<string name="message_support_thank_you">Thank you for your support!</string>
	<string name="title_options">Options</string>
	<string name="title_alarm_repeat">Repeat</string>
	<string name="title_alarm_vibrate">Vibrate</string>
	<string name="title_alarm_nfc">NFC</string>
	<string name="cd_alarm_name_color" tools:ignore="MissingTranslation">Color of the alarm name</string>
	<string name="cd_expand_alarm">Expand an alarm.</string>
	<string name="cd_volume_icon">Change the volume of an alarm.</string>
	<string name="cd_volume_slider">Slide to change the volume of an alarm.</string>
	<string name="cd_alarm_options">Change alarm-specific options.</string>
	<string name="cd_alarm_slider_arrow">Direction to swipe your finger.</string>
	<string name="cd_dismiss_alarm">Dismiss the alarm.</string>
	<string name="cd_snooze_alarm">Snooze the alarm.</string>
	<string name="cd_skip_next_alarm">Skip next alarm.</string>
	<string name="cd_delete_alarm_after_dismissed">Delete alarm after it is dismissed.</string>
</resources>