<?xml version="1.0" encoding="utf-8"?>

<!-- La rangee du bas de l'ecran d'alarme : le rail, les trois fleches, Snooze et
	Dismiss, et les deux vues qui pulsent sous les boutons.

	Elle etait recopiee a l'identique dans act_alarm_new.xml et dans act_dawn.xml,
	et les deux copies derivaient. Chaque ecran ne dit plus ici que la place qu'il
	lui donne, par les attributs poses sur son <include>.

	Dans l'apercu de l'aube, ces vues ne font rien : elles sont la pour que
	l'apercu se juge avec exactement ce que l'alarme montre. -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/My.Alarm.Active.SnoozeDismissRow"
	android:id="@+id/alarm_action_row">

	<!-- Slider -->
	<RelativeLayout
		android:id="@+id/alarm_action_slider_path"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@drawable/slider_path"
		android:visibility="invisible">

		<ImageView
			style="@style/My.Alarm.Active.SliderArrow"
			android:id="@+id/slider_center_arrow"
			android:layout_centerVertical="true"
			android:layout_centerHorizontal="true"
			android:contentDescription="@string/cd_alarm_slider_arrow"
			/>

		<ImageView
			style="@style/My.Alarm.Active.SliderArrow.Left"
			android:id="@+id/slider_left_arrow"
			android:layout_centerVertical="true"
			android:layout_toStartOf="@id/slider_center_arrow"
			android:contentDescription="@string/cd_alarm_slider_arrow"
			/>

		<ImageView
			style="@style/My.Alarm.Active.SliderArrow.Right"
			android:id="@+id/slider_right_arrow"
			android:layout_centerVertical="true"
			android:layout_toEndOf="@id/slider_center_arrow"
			android:contentDescription="@string/cd_alarm_slider_arrow"
			/>
	</RelativeLayout>

	<!-- Snooze animation -->
	<RelativeLayout
		style="@style/My.Alarm.Active.SnoozeDismissButton"
		android:id="@+id/snooze_attention_view"
		android:layout_alignTop="@id/snooze_view"
		android:layout_alignStart="@id/snooze_view"
		android:alpha="0.3"
		android:backgroundTint="@color/white"
		/>

	<!-- Dismiss animation -->
	<RelativeLayout
		style="@style/My.Alarm.Active.SnoozeDismissButton"
		android:id="@+id/dismiss_attention_view"
		android:layout_alignTop="@id/dismiss_view"
		android:layout_alignStart="@id/dismiss_view"
		android:alpha="0.3"
		android:backgroundTint="@color/white"
		/>

	<!-- Snooze -->
	<RelativeLayout
		style="@style/My.Alarm.Active.SnoozeDismissButton"
		android:id="@+id/snooze_view"
		android:layout_alignParentStart="true"
		android:layout_centerVertical="true"
		android:layout_marginStart="@dimen/tiny"
		android:backgroundTint="@color/gray_light"
		android:gravity="center_vertical">

		<ImageView
			android:id="@+id/snooze_icon"
			android:layout_width="@dimen/isz_large"
			android:layout_height="@dimen/isz_large"
			android:layout_centerHorizontal="true"
			android:src="@drawable/snooze"
			android:contentDescription="@string/cd_snooze_alarm"
			/>

		<TextView
			android:id="@+id/snooze_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/snooze_icon"
			android:layout_centerHorizontal="true"
			android:textColor="@color/white"
			android:textSize="@dimen/tsz_tiny"
			android:textStyle="bold"
			android:text="@string/action_alarm_snooze"
			/>
	</RelativeLayout>

	<!-- Dismiss -->
	<RelativeLayout
		style="@style/My.Alarm.Active.SnoozeDismissButton"
		android:id="@+id/dismiss_view"
		android:layout_alignParentEnd="true"
		android:layout_centerVertical="true"
		android:layout_marginEnd="@dimen/tiny"
		android:backgroundTint="@color/orange"
		android:gravity="center_vertical">

		<ImageView
			android:id="@+id/dismiss_icon"
			android:layout_width="@dimen/isz_dismiss_large"
			android:layout_height="@dimen/isz_dismiss_large"
			android:layout_centerHorizontal="true"
			android:src="@drawable/dismiss"
			android:contentDescription="@string/cd_dismiss_alarm"
			/>

		<TextView
			android:id="@+id/dismiss_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/dismiss_icon"
			android:layout_centerHorizontal="true"
			android:textColor="@color/white"
			android:textSize="@dimen/tsz_tiny"
			android:textStyle="bold"
			android:text="@string/action_alarm_dismiss"
			/>
	</RelativeLayout>
</RelativeLayout>
